<resources>
    <string name="app_name">副卡管理</string>
    <string name="login_label">登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="username_empty_tips">用户名不能为空</string>
    <string name="password_empty_tips">密码不能为空</string>
    <string name="login_loading_tips">正在登录中...</string>
    <string name="login_fail">登录失败</string>
    <string name="login_success">登录成功</string>
    <string name="unhandled_title">待处理</string>
    <string name="handled_title">已处理</string>
    <string name="loading_fail">加载失败</string>
    <string name="loading_more_fail">加载更多失败</string>
    <string name="pic_add">点击添加</string>
    <string name="pic_modify">点击修改</string>
    <string name="btn_cancle">取消</string>
    <string name="btn_album">相册</string>
    <string name="btn_camera">相机</string>
    <string name="btn_album_camera">相册/相机</string>
    <string name="btn_delete_image">删除</string>
    <string name="tips_pic_amount">图片数量不能少于两张</string>
    <string name="logout">注销</string>
    <string name="logout_fail">注销失败</string>
    <string name="processing">他人处理中</string>
    <string name="card_amount">加油卡数量:</string>
    <string name="card_num">卡号</string>
    <string name="input_card_num_tips">请输入卡号</string>
    <string name="send_no_tips">快递单号</string>
    <string name="send_no_hint">请扫描或输入快递单号</string>
    <string name="send_type_tips">快递类型</string>
    <string name="btn_submit">确认提交</string>
    <string name="upload_pic_tips">请拍摄上传加油卡、快递单照片(至少2张图)</string>
    <string name="apply_info_tips">申请信息</string>
    <string name="input_info_tips">录入信息</string>
    <string name="add_pic_tips">添加图片</string>
    <string name="card_num_error">卡号错误</string>
    <string name="network_error">网络错误</string>
    <string name="cancle_apply_success">已取消处理</string>
    <string name="cancle_apply_fail">取消处理失败</string>
    <string name="empty_express_no">请填写快递单号</string>
    <string name="card_no_error">卡号错误</string>
    <string name="submiting">正在提交数据...</string>
    <string name="submit_success">提交成功</string>
    <string name="submit_result_tips">如资料有误，请联系客服主管修改</string>
    <string name="dialog_title">提示</string>
    <string name="btn_positive">确认</string>
    <string name="sendcard_handing">他人处理中</string>
    <string name="request_handing">请求处理中...</string>
    <string name="handled_fail">请求处理失败</string>
    <string name="cancle_handled">他人处理中，确定取消处理？</string>
</resources>
