<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_mar"
                android:layout_marginRight="@dimen/normal_mar"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="2"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/apply_info_tips"
                    android:textColor="@color/color_theme" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="2"
                    android:background="@android:color/darker_gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_mar"
                android:layout_marginRight="@dimen/normal_mar"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_amount"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/big_font_size" />

                    <TextView
                        android:id="@+id/tv_card_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/big_font_size"
                        tools:text="1张" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/big_font_size"
                        tools:text="张三" />

                    <TextView
                        android:id="@+id/tv_phone_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/big_font_size"
                        tools:text="18852404075" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_province"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/big_font_size"
                            tools:text="广东省" />

                        <TextView
                            android:id="@+id/tv_city"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/big_font_size"
                            tools:text="深圳市" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/big_font_size"
                        tools:text="田厦国际" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_mar"
                android:layout_marginRight="@dimen/normal_mar"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="2"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/input_info_tips"
                    android:textColor="@color/color_theme" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="2"
                    android:background="@android:color/darker_gray" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_input_card_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/normal_mar"
                android:paddingRight="@dimen/normal_mar"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/divider_bg"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_height"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/normal_mar"
                    android:paddingRight="@dimen/normal_mar">

                    <TextView
                        android:id="@+id/tv_express_num_tips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:text="@string/send_no_tips"
                        android:textColor="@android:color/black" />

                    <EditText
                        android:id="@+id/ed_express_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/tv_express_num_tips"
                        android:background="@null"
                        android:hint="@string/send_no_hint"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/normal_text_font_size" />

                    <ImageView
                        android:id="@+id/iv_qr_code"
                        android:layout_width="@dimen/item_height"
                        android:layout_height="@dimen/item_height"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:padding="10dp"
                        android:src="@drawable/icon_camera" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_divider" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_height"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/normal_mar"
                    android:paddingRight="@dimen/normal_mar">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:text="@string/send_type_tips"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="20dp"
                        android:layout_toLeftOf="@+id/iv_arrow_right"
                        android:inputType="number"
                        android:singleLine="true"
                        android:text="顺丰"
                        android:textColor="@android:color/black" />

                    <ImageView
                        android:id="@+id/iv_arrow_right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/icon_arrow_right" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_mar"

                android:layout_marginRight="@dimen/normal_mar"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="2"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/add_pic_tips"
                    android:textColor="@color/color_theme" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="2"
                    android:background="@android:color/darker_gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/normal_mar"
                android:layout_marginRight="@dimen/normal_mar"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_pic_tips"
                    android:textColor="@android:color/black" />

                <com.troy.sendcard.ui.view.CustomGridView
                    android:id="@+id/gridview_pic_upload"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:horizontalSpacing="5dp"
                    android:numColumns="4"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="5dp"></com.troy.sendcard.ui.view.CustomGridView>
            </LinearLayout>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="@dimen/btn_submit_width"
                android:layout_height="@dimen/btn_submit_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_unhandled_selector"
                android:text="@string/btn_submit"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>